--- a/package.json
+++ b/package.json
@@ -19,7 +19,14 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-particles": "^2.10.1",
+    "react-tsparticles": "^2.10.1",
     "tailwindcss": "3.3.2",
+    "tsparticles": "^2.10.1",
+    "tsparticles-plugin-absorbers": "^2.10.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "tailwind-clip-path": "^1.0.0"
   }
 }
