create member pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     ],
     "paths": {
       "@/*": ["./*"],
+      "@homepage/*" : ["./asset/homepage/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
