--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "@homepage/*" : ["./asset/homepage/*"]
+      "@pageImage/*": ["./assets/images/pages/*"],
+      "@sections/*": ["./app/sections/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
