--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "10.4.14",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.3",
+    "gray-matter": "^4.0.3",
+    "markdown-to-jsx": "^7.3.2",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
