--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-particles": "^2.10.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-tsparticles": "^2.10.1",
     "tailwindcss": "3.3.2",
     "tsparticles": "^2.10.1",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.6.0",
+    "@types/react-image-gallery": "^1.2.0",
     "tailwind-clip-path": "^1.0.0"
   }
 }
