--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "eslint-config-next": "13.4.3",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.3.2",
-    "next": "13.4.3",
+    "next": "^13.4.3",
     "postcss": "8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-particles": "^2.10.1",
     "react-tsparticles": "^2.10.1",
     "tailwindcss": "3.3.2",
