--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@types/react-helmet": "^6.1.6",
     "autoprefixer": "10.4.14",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.3",
@@ -21,6 +22,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-image-gallery": "^1.3.0",
     "react-particles": "^2.10.1",
     "react-responsive-carousel": "^3.2.23",
