--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-particles": "^2.10.1",
     "react-responsive-carousel": "^3.2.23",
     "react-tsparticles": "^2.10.1",
+    "react-visibility-sensor": "^5.1.1",
     "tailwindcss": "3.3.2",
     "tsparticles": "^2.10.1",
     "tsparticles-plugin-absorbers": "^2.10.1",
