--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@types/react-helmet": "^6.1.6",
+    "@vercel/og": "^0.5.13",
     "autoprefixer": "10.4.14",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.3",
