--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-image-gallery": "^1.3.0",
     "react-particles": "^2.10.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3",
     "react-tsparticles": "^2.10.1",
     "react-visibility-sensor": "^5.1.1",
     "tailwindcss": "3.3.2",
