--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-tsparticles": "^2.10.1",
     "react-visibility-sensor": "^5.1.1",
+    "sharp": "^0.32.5",
     "tailwindcss": "3.3.2",
     "tsparticles": "^2.10.1",
     "tsparticles-plugin-absorbers": "^2.10.1",
