--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.4",
     "@types/react-helmet": "^6.1.6",
     "autoprefixer": "10.4.14",
+    "axios": "^1.6.5",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.4.3",
     "framer-motion": "^10.16.4",
@@ -27,6 +28,7 @@
     "react-image-gallery": "^1.3.0",
     "react-particles": "^2.10.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-spinners-kit": "^1.9.1",
     "react-toastify": "^9.1.3",
     "react-tsparticles": "^2.10.1",
     "react-visibility-sensor": "^5.1.1",
