--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.16.4",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.3.2",
+    "moment": "^2.30.1",
     "next": "^13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
